src/assets/sitemap.css
:root {
    --heart: rgb(234, 15,11);
    --beat: rgb(0, 247, 246);
    --pollen: rgb(230, 230, 230);
}

body {
    margin: 0;
    padding: 0;
    min-width: 100%;
    width: 100%;
    overflow-x: hidden;
    height: 100vh;
    overflow: hidden;
    display: flex;
    justify-content: center;
}

.sitemap {
    max-width: 95vw;
    min-height: 80vh;
    margin: 0 auto;
    /* margin-top: 150px; */
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    border: 0px black dashed;
    /* background-image: url("/content/svg/title.svg");
    background-size: 50%;
    background-repeat: no-repeat;
    background-position: top; */
}

h1 {
    color: var(--beat);
    font-size: 1rem;
    filter: drop-shadow(0 0 10px var(--pollen));
    text-align: center;
    line-height: 90%;
}

a {
    text-decoration: underline;
    color: var(--beat);
}

a:hover {
    color: var(--heart);
    filter: blur(0.5px);
}

h2 {
    font-family: Pixelify Sans, sans-serif;
    color: var(--beat);
    font-size: 1.4rem;
  /*   text-shadow: white 0px 0 15px; */
    /* -webkit-text-stroke: 0.5px var(--beat); */
    z-index: 10;
    padding-bottom: 16px;
}

h2:hover {
/*     text-shadow: white 0px 0 15px;
    -webkit-text-stroke: 0.5px var(--beat); */
}

li {
    font-family: Pixelify Sans, sans-serif;
    color: var(--beat);
    font-size: 1.4rem;
    line-height: 150%;
  /*   text-shadow: white 0px 0 15px; */
    /* -webkit-text-stroke: 0.5px var(--beat); */
    z-index: 10;
    padding-left: 30px;
}

.map-column {
    border: 0px black solid;
    flex: 1;
    max-width: 400px;
    min-width: 300px;
    height: auto;
    margin-top: 0px;
}

ul p {
    font-family: Doto, sans-serif !important;
    font-weight: 600;
    font-size: 1rem;
    padding-left: 44px;
    padding-top: 0px;
    line-height: 94%;
    letter-spacing: -0.5px;
    color: var(--pollen);
    margin-bottom: 12px;
}

.map-columns {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    width: 100%;
    padding: 0 20vw;
}

@media (max-width: 800px) {

.map-columns {
    flex-direction: column;
}

}

